--- a/index.html
+++ b/index.html
@@ -3,8 +3,39 @@
 <head>
     <meta charset="UTF-8" />
     <title>Fabiana Maksoud Portfolio</title>
+    <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 <body>
-    <p>Welcome to my portfolio</p>
+    <header>
+        <nav id="hero">
+            <ul>
+                <li>
+                    <a href="">Fabiana Maksoud</a>
+                </li>
+                <li>
+                    <a href="">Work</a>
+                </li>
+                <li>
+                    <a href="">About</a>
+                </li>
+
+            </ul>
+        </nav>
+        <h1>Hey, my name is Fabiana Maksoud.<br>Check out my work below. </h1>
+    </header>
+    <section>
+        <label for="cars">Choose a car:</label>
+
+        <select name="work-filter" id="work-filter">
+            <option value="UX/UI">UX/UI</option>
+            <option value="Graphic Design">Graphic Design</option>
+        </select>
+        <ul>
+            <li>work 1</li>
+            <li>work 1</li>
+            <li>work 1</li>
+            <li>work 1</li>
+        </ul>
+    </section>
 </body>
 </html>
