--- a/index.html
+++ b/index.html
@@ -4,38 +4,75 @@
     <meta charset="UTF-8" />
     <title>Fabiana Maksoud Portfolio</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
+    <script src="main.js"></script>
 </head>
 <body>
-    <header>
-        <nav id="hero">
-            <ul>
-                <li>
-                    <a href="">Fabiana Maksoud</a>
-                </li>
-                <li>
-                    <a href="">Work</a>
-                </li>
-                <li>
-                    <a href="">About</a>
-                </li>
+    <div id="main-container">
+        <header>
+            <nav id="hero">
+                <ul>
+                    <li>
+                        <a href="">Fabiana Maksoud</a>
+                    </li>
+                    <li>
+                        <a href="">Work</a>
+                    </li>
+                    <li>
+                        <a href="">About</a>
+                    </li>
 
-            </ul>
-        </nav>
-        <h1>Hey, my name is Fabiana Maksoud.<br>Check out my work below. </h1>
-    </header>
-    <section>
-        <label for="cars">Choose a car:</label>
-
-        <select name="work-filter" id="work-filter">
-            <option value="UX/UI">UX/UI</option>
-            <option value="Graphic Design">Graphic Design</option>
-        </select>
-        <ul>
-            <li>work 1</li>
-            <li>work 1</li>
-            <li>work 1</li>
-            <li>work 1</li>
+                </ul>
+            </nav>
+            <img id="hero-img" src="imagens/teste-fundo.png" alt="">
+           <h1>
+                Brazilian designer based in Rio de Janeiro working for 8 years in print and digital projects for marketing teams. Check out my work ;) 
+            </h1>
+        </header>
+        <ul class="projects">
+        <li class="project-family">
+                <div class="project-family-header">
+                    <div>01</div>
+                    <div class="project-family-title">Graphic Design</div>
+                    <div>
+                        <a href=""><img src="imagens/Arrow 4.png" alt="arrow-bottom" /></a>
+                    </div>
+                </div>
+                <div class="work">
+                    <p>work</p>
+                    <p>work</p>
+                    <p>work</p>
+                    <p>work</p>
+                    <p>work</p>
+                    <p>work</p>
+                    <p>work</p>
+                    <p>work</p>
+                    <p>work</p>
+                </div>
+        </li>
+        <li class="project-family">
+                <div class="project-family-header">
+                    <div>02</div>
+                    <div class="project-family-title">UX/UI</div>
+                    <div>
+                        <a href=""><img src="imagens/Arrow 4.png" alt="arrow-bottom" /></a>
+                    </div>
+                </div>
+                <div class="work">
+                    <p>work Ux</p>
+                    <p>work</p>
+                    <p>work</p>
+                    <p>work</p>
+                    <p>work</p>
+                    <p>work</p>
+                    <p>work</p>
+                    <p>work</p>
+                    <p>work</p>
+                </div>
+        </li>
         </ul>
-    </section>
+        <footer>
+                <p>© 2025 by Fabiana Maksoud. Created by Fabiana Maksoud</p> 
+        </footer>
+    </div>
 </body>
 </html>
