--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <title>Fabiana Maksoud Portfolio</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
     <script src="main.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=DM+Mono:ital,wght@0,300;0,400;0,500;1,300;1,400;1,500&family=Inconsolata:wght@200..900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <div id="main-container">
@@ -12,61 +16,65 @@
             <nav id="hero">
                 <ul>
                     <li>
-                        <a href="">Fabiana Maksoud</a>
+                        <a href="index.html">Fabiana Maksoud</a>
                     </li>
                     <li>
-                        <a href="">Work</a>
+                        <a href="about.html">About</a>
                     </li>
                     <li>
-                        <a href="">About</a>
+                        <a href="index.html">Work</a>
                     </li>
 
                 </ul>
             </nav>
-            <img id="hero-img" src="imagens/teste-fundo.png" alt="">
+            
            <h1>
-                Brazilian designer based in Rio de Janeiro working for 8 years in print and digital projects for marketing teams. Check out my work ;) 
+                Designer based in Rio de Janeiro working for marketing teams. <br> Check out my work ;) 
             </h1>
         </header>
         <ul class="projects">
         <li class="project-family">
                 <div class="project-family-header">
                     <div>01</div>
-                    <div class="project-family-title">Graphic Design</div>
+                    <div class="project-family-title">UX/UI</div>
                     <div>
-                        <a href=""><img src="imagens/Arrow 4.png" alt="arrow-bottom" /></a>
+                        <img src="imagens/Arrow 4.png" alt="arrow-bottom" />
                     </div>
                 </div>
-                <div class="work">
-                    <p>work</p>
-                    <p>work</p>
-                    <p>work</p>
-                    <p>work</p>
-                    <p>work</p>
-                    <p>work</p>
-                    <p>work</p>
-                    <p>work</p>
-                    <p>work</p>
+                <div class="work" style="display: none;">
+                    <ul>
+                        <li>
+                            test
+                        </li>
+                        <li>
+                            qqqq
+                        </li>
+                        <li>
+                            dddd
+                        </li>
+                        <li>
+                            sss
+                        </li>
+                    </ul>
                 </div>
         </li>
         <li class="project-family">
                 <div class="project-family-header">
                     <div>02</div>
-                    <div class="project-family-title">UX/UI</div>
+                    <div class="project-family-title">Graphic Design</div>
                     <div>
-                        <a href=""><img src="imagens/Arrow 4.png" alt="arrow-bottom" /></a>
+                        <img src="imagens/Arrow 4.png" alt="arrow-bottom" />
                     </div>
                 </div>
-                <div class="work">
-                    <p>work Ux</p>
-                    <p>work</p>
-                    <p>work</p>
-                    <p>work</p>
-                    <p>work</p>
-                    <p>work</p>
-                    <p>work</p>
-                    <p>work</p>
-                    <p>work</p>
+                <div class="work" style="display: none;">
+                    <ul>
+                        <li>
+                          UX UI 1 
+                        </li>
+                        <li>
+                          UX UI 2
+                        </li>
+                    </ul>
                 </div>
         </li>
         </ul>
