--- a/about.html
+++ b/about.html
@@ -68,9 +68,9 @@
             </div> 
             
         </div>
-       <h4 class="contact-work">Contact me: maksoud.fabi@gmail.com</h4>
+
         <footer>
-                <p>© 2025 by Fabiana Maksoud. Created by Fabiana Maksoud</p> 
+                <p><b>Contact me: </b>maksoud.fabi@gmail.com | <a href="https://www.linkedin.com/in/fabianamaksoud/"alt="link-linkedin-fabiana">linkedin.com/in/fabianamaksoud/</a></p> 
         </footer>
 </body>
 </html>
