--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <script src="main.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=DM+Mono:ital,wght@0,300;0,400;0,500;1,300;1,400;1,500&family=Inconsolata:wght@200..900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-
+<link href="https://fonts.googleapis.com/css2?family=Oranienbaum&display=swap" rel="stylesheet">
 </head>
 <body>
     <div id="main-container">
@@ -29,7 +28,7 @@
             </nav>
             
            <h1>
-                Designer based in Rio de Janeiro working for marketing teams. <br> Check out my work ;) 
+                Hello! I am a designer based in Rio de Janeiro working for marketing teams. <br> Check out my work ;) 
             </h1>
         </header>
         <ul class="projects">
@@ -38,7 +37,7 @@
                     <div>01</div>
                     <div class="project-family-title">UX/UI</div>
                     <div>
-                        <img src="imagens/Arrow 4.png" alt="arrow-bottom" />
+                        <img class="project-family-arrow" src="imagens/Arrow 4.png" alt="arrow-bottom" />
                     </div>
                 </div>
                 <div class="work" style="display: none;">
@@ -63,7 +62,7 @@
                     <div>02</div>
                     <div class="project-family-title">Graphic Design</div>
                     <div>
-                        <img src="imagens/Arrow 4.png" alt="arrow-bottom" />
+                        <img class="project-family-arrow" src="imagens/Arrow 4.png" alt="arrow-bottom" />
                     </div>
                 </div>
                 <div class="work" style="display: none;">
@@ -79,7 +78,7 @@
         </li>
         </ul>
         <footer>
-                <p>© 2025 by Fabiana Maksoud. Created by Fabiana Maksoud</p> 
+            <p><b>Contact me: </b>maksoud.fabi@gmail.com | <a class="linkedin" href="https://www.linkedin.com/in/fabianamaksoud/"alt="link-linkedin-fabiana">linkedin.com/in/fabianamaksoud/</a></p> 
         </footer>
     </div>
 </body>
